istio/ignite-peerauth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: ignite
spec:
  mtls:
    mode: PERMISSIVE
