istio/ignite-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: proxy
  namespace: ignite
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 10800
      name: tcp-thinclient
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ignite-service
  namespace: ignite
spec:
  hosts:
  - "*"
  gateways:
  - proxy
#  - mesh
  http:
  - match:
    - gateways:
      - proxy
#      port: 80
    - uri:
        prefix: "/gridgain/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: ignite
        port:
          number: 8080
  tcp:
  - match:
    - port: 10800
    route:
    - destination:
        host: ignite
        port:
          number: 10800
#  - match:
#    - gateways:
#      - mesh
#      port: 80
#    route:
#    - destination:
#        host: localhost.local
#        port:
#          number: 80
